[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68" # 错误处理
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0" # 命令行终端多彩显式
jsonxf = "1.1.1" # JSON pretty print 格式化
mime = "0.3.16" # 处理 MIME type
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] } # HTTP Client
syntect = "5.0.0"
tokio = { version = "1.25.0", features = ["full"] } # 异步处理库
